[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/img_fundoChaoThor.png" type="Texture" id=2]
[ext_resource path="res://scripts/Bixin.gd" type="Script" id=3]
[ext_resource path="res://assets/thorIdle.png" type="Texture" id=4]
[ext_resource path="res://assets/thorbate.png" type="Texture" id=5]
[ext_resource path="res://assets/thorgrave.png" type="Texture" id=6]
[ext_resource path="res://scripts/Barra.gd" type="Script" id=7]
[ext_resource path="res://assets/barra_recipiente.png" type="Texture" id=8]
[ext_resource path="res://assets/barra.png" type="Texture" id=9]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=10]

[sub_resource type="Animation" id=1]
resource_name = "AnimBate"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bate:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=2]
size = 140
font_data = ExtResource( 10 )

[node name="MainNode" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -788.5, -61.198 )
scale = Vector2( 2.028, 2.102 )
texture = ExtResource( 2 )
centered = false

[node name="Bixin" type="Node2D" parent="."]
position = Vector2( 220, 1070 )
z_index = 1
script = ExtResource( 3 )

[node name="Idle" type="Sprite" parent="Bixin"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Bate" type="Sprite" parent="Bixin"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Lapide" type="Sprite" parent="Bixin"]
visible = false
modulate = Color( 0.176471, 0.607843, 0.917647, 1 )
position = Vector2( -46, 40 )
scale = Vector2( 0.207, 0.145 )
texture = ExtResource( 6 )
flip_h = true

[node name="AnimBate" type="AnimationPlayer" parent="Bixin"]
anims/AnimBate = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
z_index = 2
anchor_mode = 0
current = true

[node name="Barris" type="Node2D" parent="."]

[node name="DestroyBarris" type="Node2D" parent="."]

[node name="TimerToRestart" type="Timer" parent="."]
wait_time = 3.0

[node name="Barra" type="Node2D" parent="."]
position = Vector2( 360, 50 )
scale = Vector2( 2, 1.5 )
script = ExtResource( 7 )

[node name="Molde" type="Sprite" parent="Barra"]
texture = ExtResource( 8 )

[node name="Preenchimento" type="Sprite" parent="Barra"]
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 0, 0, 188, 23 )

[node name="Control" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="Control"]
margin_top = 53.0
margin_right = 719.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.815686, 0, 1 )
text = "0"
align = 1

[connection signal="timeout" from="TimerToRestart" to="." method="_on_TimerToRestart_timeout"]
